Add small delay to make things more realistic

--- a/tests/k8s/sender.yml
+++ b/tests/k8s/sender.yml
@@ -9,6 +9,7 @@ spec:
     spec:
       containers:
       - name: sender
-        image: neowaylabs/statsdig
+        image: neowaylabs/statsdig:latest
+        imagePullPolicy: Always
         command: ["./sender"]
       restartPolicy: Never
